fix(strapi-db-transactions): Update description

--- a/data/articles/strapi-database-transactions-the-right-way.mdx
+++ b/data/articles/strapi-database-transactions-the-right-way.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Strapi And Database Transactions: The Right Way'
-description: Understand why baby typescript is whining and give him a pacifier to make him feel at peace.
+description: Learn how to use database transactions with Strapi and the differences between the query and services APIs.
 date: '2022-05-18'
 update: '2022-05-18'
 categories: ['backend']
